# codecrafters-kafka-cpp

./: .clang-format  .clang-tidy  .envrc  CMakeLists.txt  README.md  opencode.json  opencode.jsonc  vcpkg.json  your_program.sh
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json
src/: api_details.cpp  api_details.hpp  client_session.cpp  client_session.hpp  error.hpp  handler.cpp  handler.hpp  main.cpp  reader.hpp  request.cpp  request.hpp  request_handler.cpp  request_handler.hpp  response.cpp  response.hpp  serializable.hpp  writer.cpp  writer.hpp
src/api/: client_session.cpp  client_session.hpp  controller.cpp  controller.hpp  middleware.cpp  middleware.hpp  registry.cpp  registry.hpp  router.cpp  router.hpp  types.hpp
src/api/dto/: api_versions.cpp  api_versions.hpp  describe.hpp  describe_topic_partitions.hpp  fetch.hpp  fetch_partitions.hpp  produce.hpp  request.hpp  response.hpp
src/api/handler/: client_session.cpp  client_session.hpp  request_handler.cpp  request_handler.hpp
src/core/: deserializable.hpp  error.hpp  hexdump.cpp  hexdump.hpp  primitive_deserializers.hpp  primitive_serializers.hpp  reader.cpp  reader.hpp  serializable.hpp  writer.cpp  writer.hpp
src/metadata/: cache.hpp  parser.cpp  parser.hpp
src/metadata/dto/: topic.hpp
src/storage/: disk_reader.cpp  disk_reader.hpp  log_parser.cpp  log_parser.hpp  log_writer.cpp  log_writer.hpp
